--- a/.github/workflows/V2AutoUpgrade.yml
+++ b/.github/workflows/V2AutoUpgrade.yml
@@ -2,8 +2,8 @@ name: V2AutoUpgrade
 
 on:
   schedule:
-    - cron: '*/3 * * * *' # 每3小时运行
-  workflow_dispatch: # 允许手动运行
+    - cron: '0 */3 * * *' # 每3小时运行
+  workflow_dispatch: # 允许手动触发工作流
 
 jobs:
   merge-files:
@@ -16,8 +16,8 @@ jobs:
       id: dates
       run: |
         YEAR=$(date +%Y)
-        MONTH=$(date +%m)
-        DAY=$(date +%d)
+        MONTH=$(printf "%02d" $(date +%m))
+        DAY=$(printf "%02d" $(date +%d))
         FILE_DATE="${YEAR}${MONTH}${DAY}"
         FILE1="https://nodedog.githubrowcontent.com/${YEAR}/${MONTH}/${FILE_DATE}.txt"
         FILE2="https://clashnode.cc/uploads/${YEAR}/${MONTH}/0-${FILE_DATE}.txt"
@@ -25,16 +25,32 @@ jobs:
         echo "FILE1=${FILE1}" >> $GITHUB_ENV
         echo "FILE2=${FILE2}" >> $GITHUB_ENV
         echo "FILE3=${FILE3}" >> $GITHUB_ENV
+        echo "Generated URLs: $FILE1, $FILE2, $FILE3"
 
     - name: Download and merge files
       run: |
-        curl -s $FILE1 > combined.txt
-        curl -s $FILE2 >> combined.txt
-        curl -s $FILE3 >> combined.txt
+        # 确保合并文件为空
+        > combined.txt
 
-        # 将合并后的文件添加到仓库
-        git config --local user.email "1402394430@qq.com"
-        git config --local user.name "zjtie"
-        git add combined.txt
-        git commit -m "Update combined file for $(date +%Y-%m-%d)" || echo "No changes to commit"
-        git push
+        # 下载文件并合并
+        for FILE_URL in "$FILE1" "$FILE2" "$FILE3"; do
+          echo "Processing $FILE_URL"
+          if curl -s --fail "$FILE_URL" >> combined.txt; then
+            echo "Successfully downloaded $FILE_URL"
+          else
+            echo "Warning: Failed to download $FILE_URL" >&2
+          fi
+        done
+
+    - name: Commit and push changes
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        if [ -s combined.txt ]; then
+          git config --local user.email "1402394430@qq.com"
+          git config --local user.name "zjtie"
+          git add combined.txt
+          git commit -m "Update combined file for $(date +%Y-%m-%d)" || echo "No changes to commit"
+          git push
+        else
+          echo "No content to commit, skipping push."
