--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,8 +59,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           if [ -s v2.txt ]; then
-            git config --local user.email "your-email@example.com"
-            git config --local user.name "your-username"
+            git config --local user.email "1402394430@qq.com"
+            git config --local user.name "zjtie"
             git add v2.txt
             git commit -m "Update v2.txt for $(date +%Y-%m-%d)" || echo "No changes to commit"
             git push
